# EGT_Onboarding_Tasks

./: README.md
CarRentCompanyRelationships/: CMakeLists.txt  car.cpp  car.h  customer.cpp  customer.h  main.cpp  rentalagency.cpp  rentalagency.h
CommonExercise/: CMakeLists.txt  main.cpp
HRM_System/: developer.cpp  developer.h  employee.cpp  hr_department.cpp  hr_department.h  main.cpp  manager.cpp
HRM_System/HRM_System/: CMakeLists.txt  TaskDescription.h  developer.cpp  employee.cpp  employee.h  hr_department.cpp  hr_department.h  main.cpp  manager.cpp  manager.h
JanTaskCarRentalCompany/: CMakeLists.txt  DEscription.h  car.cpp  car.h  customer.cpp  customer.h  main.cpp  rentalagengy.cpp  rentalagengy.h
OOpTasK/OOpTasK/: OOpTasK.cpp
OOpTasK2/OOpTasK2/: TextEditorTool.cpp  TextEditorTool.h  TextTool.cpp  TextTool.h  ToolBox.cpp  ToolBox.h  main.cpp
PointerExreciseFromIliyan/PointerExreciseFromIliyan/: main.cpp
RobertoTasks/: RobertoTasks.sln
RobertoTasks/RobertoTasks/: Description.h  main.cpp
RobiMixProblems/: RobiMixProblems.sln
RobiMixProblems/RobiMixProblems/: Descriptions.cpp  Descriptions.h  main.cpp
RobiTaskLambdaAndFunctions/: RobiTaskLambdaAndFunctions.sln
RobiTaskLambdaAndFunctions/RobiTaskLambdaAndFunctions/: RobiTaskLambdaAndFunctions.cpp
StringsAndStreamsZori/StringsAndStreamsZori/: Description.h  main.cpp
TraficTackZ/TraficTackZ/: main.cpp
Vector_Exercises/: CMakeLists.txt  main.cpp
stl-part-1-exercise/: CMakeLists.txt  main.cpp
stl-part-2-exercise/: CMakeLists.txt  main.cpp
